[package]
name = "loop-baker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
fixedbitset = "0.4"
fxhash = "0.2"
gltf = "1"
nalgebra = "0.31"
once_cell = "1"
ordered-float = "3"
petgraph = "0.6"
smallvec = "1"

[dependencies.clap]
version = "3"
features = ["derive"]

[dependencies.image]
version = "0.24"
features = ["png"]

[profile.rel-with-deb-info]
inherits = "release"
debug = true
